--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
 				</div>
 				<h2 class="col-12">Расскажите о себе</h2>
 				<p class="col-12">Напишите несколько предложений, чем привлекла наша вакансия и что вы ожидаете от работы у нас.</p>
-				<textarea class="col-12 col-sm-7" name="about" id="" cols="30" rows="10" placeholder="Понравилась тем, что...">Меня привлекло то, что у Вас развивающаяся компания. Мне было бы очень интересно работать в таком месте. Еще мне понравилось качественно оформленное тестовое задание.
-У Вас я ожидаю интересной работы и саморазвития для себя. Применрно из 10 часов работы - около 3 часов заняло вникнуть в Bootstrap 4 (посколку раньше я его не юзал), еще примерно 2 часа на всплывающий label в input-e. Остальное время ушло на изучение т/з, макета, разнообразные выравнивания, media запросы, шрифты и пр. К сожалению не все пункты из т/з соблюдены, а именно: Стараемся максимально настроить конфигурационный файл _variables.scss и подключить только те компоненты, которые нужны для задания.
+				<textarea class="col-12 col-sm-7" name="about" id="" cols="30" rows="10" placeholder="Понравилась тем, что...">	Меня привлекло то, что у Вас развивающаяся компания. Мне было бы очень интересно работать в таком месте. Еще мне понравилось качественно оформленное тестовое задание.
+У Вас я ожидаю интересной работы и саморазвития для себя.
+	Применрно из 10 часов работы - около 3 часов заняло вникнуть в Bootstrap 4 (посколку раньше я его не юзал), еще примерно 2 часа на всплывающий label в input-e. Остальное время ушло на изучение т/з, макета, разнообразные выравнивания, media запросы, шрифты и пр. К сожалению не все пункты из т/з соблюдены, а именно: Стараемся максимально настроить конфигурационный файл _variables.scss и подключить только те компоненты, которые нужны для задания.
 ●	Собираем все сборщиком (gulp, webpack, laravel-mix) 
 ●	полученная страница должна корректно отображаться в браузерах:
 ●	Internet Explorer 10+;
